# LazyCrawler

./: .coverage  .gitattributes  .gitignore  ANALYSIS.md  ASSESSMENT_2026-07.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  conftest.py  make_news_report.py  mkdocs.yml  news_sources.py  pyproject.toml  requirements-docs.txt  requirements.txt  run_news_crawl.py  run_news_crawl_with_telegram.ps1  send_telegram_news_report.py  setup_first_run.ps1  setup_paths.py  setup_scheduler.ps1  test_crawl.py  test_db.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: COMPARISON.md  DEEP_ASSESSMENT.md  concepts.md  index.md  installation.md
docs/guides/: agent-tools.md  artifacts.md  custom-schema.md  database.md  js-rendering.md  markdown-rag.md  ml-mode.md  ml-models.md  parallel.md  pdf.md  presets.md  pure-mode.md  smart-mode.md
docs/reference/: config.md  database.md  pageresult.md  tools.md  webcrawler.md  websearch.md
examples/: basic_usage.py  spyder_setup.py
examples/news_reports/: README.md  news_cost.md  news_digest.md  news_full_global.md  news_full_latam.md
lazycrawler/: __init__.py  _log.py  _pipeline.py  artifacts.py  async_crawler.py  browser.py  config.py  crawler.py  db.py  http.py  llm.py  markdown.py  ml.py  models.py  pdf.py  presets.py  prompts.py  ratelimit.py  search.py  text.py  tools.py
tests/: browser_reuse_test.py  conftest.py  decoupled_test.py  offline_test.py  parallel_test.py  robots_test.py  smoke_test.py  test_agentic_coverage.py  test_artifacts.py  test_async_ml.py  test_audit_fixes.py  test_browser.py  test_cleanup.py  test_crawler.py  test_db.py  test_full.py  test_http.py  test_llm.py  test_markdown.py  test_ml.py  test_ml_eval.py  test_pdf.py  test_presets.py  test_ratelimit.py  test_search.py  test_security.py  test_ssrf_bypass_vectors.py  test_ssrf_migration.py  test_text.py  test_tools.py  tools_test.py
