[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazycrawler"
version = "0.3.0"
description = "Web crawler + search with pure (no-LLM) and smart (LazyBridge LLM) modes, SQLite persistence and 3-level dedup."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "selvaz" }]
keywords = ["web-crawler", "web-search", "llm", "lazybridge", "trafilatura"]

# Core: the minimum for PURE mode (no LLM).
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "trafilatura>=1.6",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# SMART mode: extraction/selection via LazyBridge. Also install the provider extra.
smart = ["lazybridge>=0.9"]
# PDF extraction (remote): PyMuPDF primary, pypdf fallback, pdfplumber tables.
pdf = ["pymupdf>=1.23", "pypdf>=4.0", "pdfplumber>=0.10"]
# WebSearch via DuckDuckGo.
search = ["ddgs>=2.0"]
# JavaScript rendering (SPAs) via a headless browser.
js = ["playwright>=1.40"]
# Domain blacklist from an Excel file.
excel = ["openpyxl>=3.1"]
# Robust date parsing (published_iso extraction).
dates = ["python-dateutil>=2.8"]
# Everything.
all = [
    "lazybridge>=0.9",
    "pymupdf>=1.23", "pypdf>=4.0", "pdfplumber>=0.10",
    "ddgs>=2.0", "playwright>=1.40", "openpyxl>=3.1", "python-dateutil>=2.8",
]

[project.urls]
Repository = "https://github.com/selvaz/lazycrawler"

[tool.setuptools]
packages = ["lazycrawler"]
