[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazycrawler"
version = "0.10.0"
description = "Web crawler + search with pure (no-LLM) and smart (LazyBridge LLM) modes, SQLite persistence and 3-level dedup."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "selvaz" }]
keywords = ["web-crawler", "web-search", "llm", "lazybridge", "trafilatura"]

# Core: the minimum for PURE mode (no LLM).
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "trafilatura>=1.6",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# SMART mode: extraction/selection via LazyBridge. Also install the provider extra.
smart = ["lazybridge>=0.9"]
# PDF extraction (remote): PyMuPDF primary, pypdf fallback, pdfplumber tables.
pdf = ["pymupdf>=1.23", "pypdf>=4.0", "pdfplumber>=0.10"]
# WebSearch via DuckDuckGo.
search = ["ddgs>=2.0"]
# JavaScript rendering (SPAs) via a headless browser.
js = ["playwright>=1.40"]
# Domain blacklist from an Excel file.
excel = ["openpyxl>=3.1"]
# Robust date parsing (published_iso extraction).  
dates = ["python-dateutil>=2.8"]
# Markdown output (RAG ingestion).
markdown = ["markdownify>=0.11"]
# Image artifact dimensions/format sniffing.
image = ["pillow>=10"]
# ML mode: no-LLM intelligent link scoring via Model2Vec static embeddings.
ml = ["model2vec>=0.3", "numpy>=1.24"]
# Everything.
all = [
    "lazybridge>=0.9",
    "pymupdf>=1.23", "pypdf>=4.0", "pdfplumber>=0.10",
    "ddgs>=2.0", "playwright>=1.40", "openpyxl>=3.1", "python-dateutil>=2.8",
    "markdownify>=0.11", "pillow>=10", "model2vec>=0.3", "numpy>=1.24",
]
# Development: tests, lint/format, build & publish tooling.
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Repository = "https://github.com/selvaz/lazycrawler"

[tool.setuptools]
packages = ["lazycrawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that require network access, an API key, or LazyBridge",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle errors (E), pyflakes (F), import sorting (I), bugbear (B).
# pyupgrade (UP) is intentionally omitted: the codebase targets 3.10 and keeps
# explicit typing (Optional/List) plus utf-8 headers as a deliberate style.
select = ["E", "F", "I", "B"]
ignore = [
    "E501",  # line length handled by the formatter, not enforced strictly
    "B008",  # function calls in argument defaults (dataclasses/config patterns)
]

[tool.ruff.lint.per-file-ignores]
# example scripts deliberately interleave imports with prose/sys.path setup
"examples/*" = ["E402"]
