[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazycrawler"
version = "0.16.0"
description = "Web crawler + search with three modes — pure (no-LLM), ml (local ML, no-LLM, zero tokens) and smart (LazyBridge LLM) — SQLite persistence and dedup."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "selvaz" }]
keywords = ["web-crawler", "web-search", "llm", "lazybridge", "trafilatura"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core: the minimum for PURE mode (no LLM).
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "trafilatura>=1.6",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# SMART mode: extraction/selection via LazyBridge. Also install the provider extra.
# LazyBridge requires Python >=3.11, so on 3.10 only pure/ml mode is available.
smart = ["lazybridge>=0.9; python_version >= '3.11'"]
# PDF extraction (remote): PyMuPDF primary, pypdf fallback, pdfplumber tables.
pdf = ["pymupdf>=1.23", "pypdf>=4.0", "pdfplumber>=0.10"]
# WebSearch via DuckDuckGo. certifi backs the CA-bundle fallback in
# search_ddg_urls (ddgs builds its own SSL context; a corrupted OS certificate
# store must not silently zero out search results).
search = ["ddgs>=2.0", "certifi"]
# JavaScript rendering (SPAs) via a headless browser.
js = ["playwright>=1.40"]
# Domain blacklist from an Excel file.
excel = ["openpyxl>=3.1"]
# Robust date parsing (published_iso extraction).  
dates = ["python-dateutil>=2.8"]
# Markdown output (RAG ingestion).
markdown = ["markdownify>=0.11"]
# Image artifact dimensions/format sniffing.
image = ["pillow>=10"]
# ML mode: no-LLM intelligent link scoring via Model2Vec static embeddings.
ml = ["model2vec>=0.3", "numpy>=1.24"]
# ML-mode local content extraction: YAKE keyphrases, VADER sentiment, spaCy NER.
# (spaCy also needs a model: `python -m spacy download en_core_web_sm`; absent it,
#  entities fall back to a regex extractor.)
nlp = ["yake>=0.4", "vaderSentiment>=3.3", "spacy>=3.7"]
# Async high-throughput crawling (pure mode) without GIL-bound threading.
# certifi backs the CA-bundle fallback in async_crawler.py (a corrupted OS
# certificate store must not crash aiohttp's own module-level SSL context).
async = ["aiohttp>=3.9", "certifi"]
# Accurate registrable-domain (eTLD+1) scope via the public suffix list. Without
# it, same_domain_only falls back to a small built-in multi-part-suffix heuristic.
domains = ["tldextract>=5"]
# The news-monitor pipeline (run_news_crawl.py / news_sources.py at the repo
# root, not part of the lazycrawler package itself): RSS/Atom/RDF parsing.
news = ["feedparser>=6.0"]
# Everything. Self-referential so it can never drift from the extras above.
all = [
    "lazycrawler[smart,pdf,search,js,excel,dates,markdown,image,ml,nlp,async,domains,news]",
]
# Development: tests, coverage, lint/format, build & publish tooling.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Repository = "https://github.com/selvaz/lazycrawler"

[tool.setuptools]
packages = ["lazycrawler"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream type-checkers see our annotations.
lazycrawler = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that require network access, an API key, or LazyBridge",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle errors (E), pyflakes (F), import sorting (I), bugbear (B).
# pyupgrade (UP) is intentionally omitted: the codebase targets 3.10 and keeps
# explicit typing (Optional/List) plus utf-8 headers as a deliberate style.
select = ["E", "F", "I", "B"]
ignore = [
    "E501",  # line length handled by the formatter, not enforced strictly
    "B008",  # function calls in argument defaults (dataclasses/config patterns)
]

[tool.ruff.lint.per-file-ignores]
# example scripts deliberately interleave imports with prose/sys.path setup
"examples/*" = ["E402"]
